# ferdek

./: .gitignore  .merlin  Makefile  README.md  dune-project  ferdecc  ferdek.ebnf
docs/: INSTALACJA.md  INSTRUKCJA.md  KEYWORDS_REFERENCE.md  KLAMOTY.md  NEW_FEATURES.md  README_AST.md  README_INTERPRETER.md  README_LEXER.md  README_PARSER.md  ferdek.ebnf
examples/: advanced_features.ferdek  arrays  arrays.c  arrays.ferdek  arrays2d.ferdek  bitwise.ferdek  bubble_sort.ferdek  classes.ferdek  conditional.ferdek  enums.ferdek  fizzbuzz  fizzbuzz.c  fizzbuzz.ferdek  framebuffer.ferdek  function_pointers.ferdek  functions  functions.c  functions.ferdek  graphics_demo.ferdek  graphics_full_demo.ferdek  graphics_x11_demo.ferdek  hello.ferdek  io.ferdek  macros_demo.ferdek  makra_ferdek.ferdek  memory.ferdek  operations.ferdek  pointers.ferdek  selection_sort.ferdek  simple_compile  simple_compile.c  simple_compile.ferdek  structs.ferdek  test_dodaj_inline.ferdek  test_interpreter.c  test_interpreter.ferdek  test_kanapa.ferdek  test_simple_skrzynka.ferdek  test_skrzynka.ferdek  test_stdlib_full.ferdek  (+8 more)
scripts/: README.md  install-full.sh  install-remote.sh  install.sh  quick-install.sh  uninstall.sh
src/: ast.ml  ast.mli  builtins_file.ml  builtins_hashmap.ml  builtins_json.ml  builtins_list.ml  builtins_string.ml  compiler.ml  compiler.mli  dune  errors.ml  ferdecc.ml  ferdek.ml  ferdek_stdlib.ml  ferdek_stdlib.mli  graphics_stubs.c  graphics_x11.c  graphics_x11.h  interpreter.ml  interpreter.mli  lexer.mll  main.ml  parser.mly  preprocessor.ml
stdlib/: README.md
stdlib/KLAMOTY/: KANAPA.ferdek  KIBEL.ferdek  KLATKA.ferdek  LODÓWKA.ferdek  SKRZYNKA.ferdek  SKRZYNKA_TEST.ferdek  SZAFKA.ferdek  TELEWIZOR.ferdek  WERSALKA.ferdek
stdlib/KLAMOTY/BABKA/: BABKA.ferdek  README.md  przyklad_testow.ferdek
tests/: dune  test_ast.ml  test_lexer.ml  test_parser.ml
tests/integration/features/: inheritance.ferdek  variables.ferdek
tests/integration/stdlib/: test_kibel.ferdek  test_klatka.ferdek  test_stdlib.ferdek  test_szafka.ferdek  test_wersalka.ferdek
