(ocamllex lexer)

(menhir
 (modules parser)
 (flags (--explain)))

(library
 (name ferdek_lib)
 (wrapped false)
 (flags
  (:standard -w -27-32))
 (modules
  ast
  parser
  lexer
  preprocessor
  interpreter
  compiler
  ferdek_stdlib
  builtins_string
  builtins_hashmap
  builtins_file
  builtins_list
  errors)
 (libraries unix str)
 (foreign_stubs
  (language c)
  (names graphics_stubs graphics_x11)
  (flags -I/opt/X11/include))
 (c_library_flags (-L/opt/X11/lib -lX11)))

(executable
 (name ferdek)
 (modules ferdek)
 (flags
  (:standard -w -27-32))
 (libraries ferdek_lib))

(executable
 (name ferdecc)
 (modules ferdecc)
 (flags
  (:standard -w -27-32))
 (libraries ferdek_lib))

(executable
 (name main)
 (modules main)
 (flags
  (:standard -w -27-32))
 (libraries ferdek_lib))
